# Onetep-Tools

./: LICENSE  README.md  cli_tools.py  data_structures.py  pyproject.toml
examples/: generate_onetep_inputs.py  onetep_keywords.py
onetep_tools/: data_structures.py
onetep_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
onetep_tools/onetep_tools.egg-info/: SOURCES.txt
src/onetep_tools/: bash_template.py  pyproject.toml
src/onetep_tools/onetep_tools.egg-info/: PKG-INFO  SOURCES.txt
